--- a/snippets/Noah Shit.css
+++ b/snippets/Noah Shit.css
@@ -4,12 +4,10 @@
 
 :root body {
     --blockquote-color: rgb(205, 214, 244) !important;
-
     --inline-title-size: 3em !important; 
-    
     --inline-title-margin-bottom: 0.2em !important;
-
     --heading-spacing: calc(var(--p-spacing)* 1.5) !important;
+    --file-line-width: 900px !important;
 }
 
 :root a {
@@ -23,7 +21,7 @@
 :root .embed-title {
     color: var(--color-purple) !important;
     font-weight: calc(var(--font-weight) + var(--bold-modifier) + 100) !important;
-    font-size: calc(var(--font-text-size) + 7px) !important;
+    font-size: calc(var(--font-text-size) + 20px) !important;
 }
 
 :root .cm-s-obsidian span.cm-formatting-highlight, .cm-s-obsidian span.cm-highlight, .markdown-rendered mark, .cm-s-obsidian span.cm-formatting-highlight, .cm-s-obsidian span.cm-highlight  {
@@ -43,5 +41,39 @@
 }
 
 :root b, strong, .cm-strong, .cm-s-obsidian span.cm-formatting-strong, .cm-s-obsidian span.cm-strong {
-    font-weight: calc(var(--font-weight) + var(--bold-modifier) + 100);
+    font-weight: calc(var(--font-weight) + var(--bold-modifier) + 100) !important;
+}
+
+:root .tree-item-self .tree-item-icon .svg-icon:not(.right-triangle) {
+    visibility: hidden !important;
+    overflow: hidden !important;
+    display: none !important;
+}
+
+:root .empty-state-title {
+    font-size: 3em !important;
+}
+
+:root .timeline {
+    --timeline-active-color: var(--text-accent) !important;
+}
+
+.is-flashing, .cm-s-obsidian .is-flashing .cm-url {
+    padding-left: 6px !important;
+	padding-right: 6px !important;
+	padding-top: 0px !important;
+	padding-bottom: 2px !important;
+	border-radius: 5px !important;
+    background-color: rgba(var(--ctp-surface2), 0.5) !important;
+    --tag-color: var(--color-pink) !important;
+    color: var(--color-pink) !important;
+    transition: 2s !important;
+}
+
+.markdown-preview-view li {
+    transition: 2s !important;
+}
+
+.footnote-link {
+    transition: 2s !important
 }
