--- a/snippets/Highlight.css
+++ b/snippets/Highlight.css
@@ -1,16 +1,24 @@
-:root .cm-s-obsidian span.cm-formatting-highlight, .markdown-rendered mark, .cm-s-obsidian span.cm-formatting-highlight, .cm-s-obsidian span.cm-highlight  {
-    padding: 0px 6px 2px 6px !important;
+:root strong > mark {
+	background-color: rgba(var(--ctp-sapphire), 0.4) !important;
+}
+
+:root em > mark {
+	background-color: rgba(var(--ctp-green), 0.4) !important;
+}
+
+:root .cm-s-obsidian span.cm-formatting-highlight, .markdown-rendered mark, .cm-s-obsidian span.cm-formatting-highlight, .cm-s-obsidian span.cm-highlight {
+	padding: 0px 6px 2px 6px !important;
 	border-radius: 5px !important;
-    background-color: rgba(var(--ctp-yellow), 0.4) !important;
+	background-color: rgba(var(--ctp-yellow), 0.4) !important;
     color: var(--ctp-overlay1) !important;
-    font-weight: calc(var(--font-weight) + 125) !important;
+	font-weight: calc(var(--font-weight) + 125) !important;
 }
 
 .cm-s-obsidian span.cm-highlight.cm-em, .cm-s-obsidian span.cm-highlight.cm-strong, strong {
-    background-color: transparent !important;
+	background-color: transparent !important;
 }
 
 .cm-s-obsidian span.cm-highlight.cm-header:not(.cm-s-obsidian span.cm-highlight.cm-em, .cm-s-obsidian span.cm-highlight.cm-strong) {
- background-image: linear-gradient(rgb(var(--ctp-red), 40%), rgb(var(--ctp-red), 60%), rgb(var(--ctp-red), 40%)) !important;   
- background-color: transparent !important;
+	background-image: linear-gradient(rgb(var(--ctp-red), 40%), rgb(var(--ctp-red), 60%), rgb(var(--ctp-red), 40%)) !important;
+	background-color: transparent !important;
 }
